update: 修改博客配置和关于页面

--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -30,25 +30,25 @@ skills: # 根据需求添加
   subtitle: 开启创造力
   tags:
     - title: HTML
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/HTML.png
+      icon: https://image.qqe4.com/Piclist/20250419/HTML.png
       color: "#e9572b"
     - title: Javascript
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/JS.png
+      icon: https://image.qqe4.com/Piclist/20250419/JS.png
       color: "#f7cb4f"
     - title: Kotlin
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/kotlin-logo.svg
+      icon: https://image.qqe4.com/Piclist/20250419/kotlin-logo.svg
       color: "#ffffff"
     - title: WebPack
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/webpack.png
+      icon: https://image.qqe4.com/Piclist/20250419/webpack.png
       color: "#2e3a41"
     - title: Git
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/git.png
+      icon: https://image.qqe4.com/Piclist/20250419/git.png
       color: "#df5b40"
     - title: Docker
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/webpack.png
+      icon: https://image.qqe4.com/Piclist/20250419/webpack.png
       color: "#57b6e6"
     - title: Visual Studio
-      icon: https://npm.elemecdn.com/wleelw-blog-abs@1.0.0/img/icon/vs-logo.svg
+      icon: https://image.qqe4.com/Piclist/20250419/vs-logo.svg
       color: "#ffffff"
 
 careers:
