--- a/themes/solitude/_config.yml
+++ b/themes/solitude/_config.yml
@@ -371,8 +371,8 @@ font:
 background:
   enable: false
   opacity: .2
-  dark: https://i.pinimg.com/originals/d8/b3/9d/d8b39d12b653810db452c437211aeb2e.png
-  light: https://i.pinimg.com/originals/93/57/38/935738ed9657b296c2ef0ebd2151eb66.jpg
+  dark: https://image.qqe4.com/Piclist/20250419/d8b39d12b653810db452c437211aeb2e.png
+  light: https://image.qqe4.com/Piclist/20250419/935738ed9657b296c2ef0ebd2151eb66.jpg
 # --------------------------- end ---------------------------
 
 # --------------------------- start ---------------------------
