--- a/themes/solitude/_config.yml
+++ b/themes/solitude/_config.yml
@@ -455,7 +455,7 @@ right_menu:
 #  information
 # 复制信息
 copy:
-  enable: false
+  enable: true
   # Turn on Link copyright information after copying.
   # 复制后链接版权信息
   copyright:
