--- a/themes/solitude/_config.yml
+++ b/themes/solitude/_config.yml
@@ -30,9 +30,9 @@ site:
 nav:
   # Left Box
   # 左侧盒子
-  # group:
-  #  project: # name
-  #    Solitude: https://github.com/everfu/hexo-theme-solitude || /img/pwa/favicon.ico # name: url || icon
+  group:
+   博客: # name
+     OvO: https://www.qqe4.com || https://image.qqe4.com/Piclist/20250417204903752.jpg # name: url || icon
 
   # Menu
   # 菜单
@@ -107,7 +107,7 @@ hometop:
 
 # Article Top Banner
 # 文章推荐轮播图
-carousel: true
+carousel: false
 # --------------------------- end ---------------------------
 
 # --------------------------- start ---------------------------
@@ -227,7 +227,7 @@ page:
   default:
     # Default image when no cover is set
     # 未设置封面时的默认图片
-    cover:
+    cover: 
       # - /img/default.png # 默认图片 / default cover
 # --------------------------- end ---------------------------
 
@@ -238,7 +238,7 @@ post:
   default:
     # Default image when no cover is set
     # 未设置封面时的默认图片
-    cover:
+    cover: /img/default.avif
       # -  # 默认图片 / default cover
     # Location
     # 位置
@@ -264,23 +264,23 @@ post:
   meta:
     # Release date
     # 发布日期
-    date: false
+    date: true
     # Update date
     # 更新日期
-    updated: false
+    updated: true
     # Location
     # 位置
-    locate: false
+    locate: true
     # Number of words
     # 字数
-    wordcount: false
+    wordcount: true
     # uv
-    readtime: false
+    readtime: true
     # pv
     pv: false
     # Comment count
     # 评论数
-    comment: false
+    comment: true
   # Reward
   # 打赏
   award:
@@ -288,8 +288,8 @@ post:
     appreciators: /about/ # Reward page
     # Reward Title
     # 打赏标题
-    title:  Thanks for your appreciation. / 感谢您的赞赏
-    desc:   Because of your support, I realize the value of writing articles. / 由于您的支持，我才能够实现写作的价值。
+    title:  感谢您的赞赏
+    desc:   由于您的支持，我才能够实现写作的价值。
     # Reward list
     # 打赏列表
     list:
@@ -312,7 +312,7 @@ post:
       - linkedin
       - link
       - qrcode
-  rss: /atom.xml
+  rss: /rss.xml
   # Article reading progress
   # 文章封面取色
   covercolor:
@@ -537,34 +537,35 @@ footer:
       X: https://twitter.com/xiangleovo || far fa-x
       Github: https://github.com/xiangleovo || fab fa-github
     right:
+      QQ: https://wpa.qq.com/msgrd?v=3&uin=99382121&site=qq&menu=yes || fab fa-qq
       Weibo: https://weibo.com/u/6109898576 || fab fa-weibo # 名称: 链接 || 图标
       BiliBili: https://space.bilibili.com/350074299 || fab fa-bilibili
       Douyin: https://v.douyin.com/POaimYxGBgU/ || fab fa-tiktok
   # 友情链接
-  group:
-    文库:
-      全部文章: /archives/
-      全部分类: /categories/
-      全部标签: /tags/
-    关于:
-      关于本站: /about/
-      闲言碎语: /essay/
-      我的装备: /tags/
-    协议:
-      Cookies: /cookies/
-      Privacy: /privacy/
-      Copyright: /copyright/
+  # group:
+  #   文库:
+  #     全部文章: /archives/
+  #     全部分类: /categories/
+  #     全部标签: /tags/
+  #   关于:
+  #     关于本站: /about/
+  #     闲言碎语: /essay/
+  #     我的装备: /tags/
+  #   协议:
+  #     Cookies: /cookies/
+  #     Privacy: /privacy/
+  #     Copyright: /copyright/
 
   # 随机友链
-  randomlink: true # 随机友链
+  randomlink: false # 随机友链
 
   # 备案
   beian:
-    - name: 湘公网安备43048102000175号
-      icon: https://beian.mps.gov.cn/img/logo01.dd7ff50e.png
-      url: https://beian.mps.gov.cn/#/query/webSearch
     - name: 皖ICP备2020017065号-2
+      icon: https://beian.mps.gov.cn/img/logo01.dd7ff50e.png
       url: https://beian.miit.gov.cn/
+    # - name: 皖ICP备2020017065号-2
+    #   url: https://beian.miit.gov.cn/
 
   # 页脚信息文字
   links:
@@ -640,7 +641,7 @@ keyboard:
 # Lazyload
 # 图片懒加载
 lazyload:
-  enable: false
+  enable: true
   # post, site
   field: site
   # 加载时替换图
@@ -800,24 +801,24 @@ comment:
   use: twikoo # waline, twikoo, valine, artalk, giscus # Up to two comment systems can be turned on at the same time
   # Whether to display the hot comment switch.
   # 是否显示热门评论开关
-  commentBarrage: false
+  commentBarrage: true
   # Lazy load
   # 懒加载评论区
   lazyload: false
   # Whether to display the comment count
   # 显示评论数
-  count: false
+  count: true
   # Sidebar displays the total number of comments
   # Sidebar 显示总评论数
   sidebar: false
   # PV
-  pv: false
+  pv: true
   # Avatar
   avatar: https://gravatar.com/avatar
   # Hot comment tips
   # 热评提示
   hot_tip:
-    enable: false
+    enable: true
     # Number of hot comments
     count: 3
   # recent comments(⚠️ Comments need to be configured first.)
