修复获取文章封面主题色

--- a/themes/solitude/_config.yml
+++ b/themes/solitude/_config.yml
@@ -318,7 +318,7 @@ post:
   covercolor:
     enable: true
     # local: local color / api: api color / ave: oss average color
-    mode: local
+    mode: api
     # api address / api 地址
     api: https://img2color.qqe4.com/api?img=
     # Storage / 缓存时间
