--- a/source/_data/kit.yaml
+++ b/source/_data/kit.yaml
@@ -1,20 +1,52 @@
 - class_name: 生产力
-  description: 提升自己生产效率的硬件设备
+  description: 提升工作效率和生产力的设备
   equipment_list:
-    - name: iphone 13 Pro
-      specification: 性价比超高
-      description: 很棒的网络存储解决方案以及流媒体传输服务器
-      image: https://7.isyangs.cn/1/65eb3d5f8057b-1.png
-    - name: iPhone 12 Pro Max
-      specification: 海蓝色 / 1TB
-      description: 功能强大，外观抢眼，设计耐用。
-      image: https://7.isyangs.cn/1/65eb3d70c59d9-1.png
-      link: https://support.apple.com/kb/SP832?locale=zh_CN
-- class_name: 出行
-  description: 用来出行的实物及设备
+    - name: iPhone 13 Pro
+      specification: 6.1英寸 / A15芯片 / 120Hz ProMotion显示屏
+      description: 强大的性能与出色的拍照能力，兼顾拍摄、剪辑、办公等多种用途，是随身的生产力利器。
+      image: https://example.com/iphone13pro.png
+      link: https://www.apple.com/iphone-13-pro/
+    - name: 罗技 MX Keys
+      specification: 无线机械键盘 / 蓝牙连接
+      description: 为高效工作而设计的键盘，键程适中，打字体验优秀，适合长时间工作使用。
+      image: https://example.com/logitech-mx-keys.png
+      link: https://www.logitech.com/en-us/product/mx-keys-wireless-keyboard
+    - name: 罗技 Master 3S
+      specification: 高性能无线鼠标 / 可自定义按钮
+      description: 适合专业工作者的鼠标，具有极高的精确度和舒适感，适合长时间使用。
+      image: https://example.com/logitech-master-3s.png
+      link: https://www.logitech.com/en-us/product/mx-master-3s
+    - name: 罗技 G Pro X Superlight 2
+      specification: 无线电竞鼠标 / 轻量化设计 / HERO传感器
+      description: 专为电竞设计，极致轻量化和高精度传感器，提供精准的操作体验。
+      image: https://example.com/logitech-gpw2.png
+      link: https://www.logitechg.com/products/gaming-mice/logitech-g-pro-x-superlight-2-wireless-gaming-mouse
+    - name: 达尔优 A100
+      specification: 有线游戏鼠标 / RGB背光 / 16000 DPI
+      description: 高性能游戏鼠标，具备高精度传感器和可调节的 DPI，适合长时间游戏使用。
+      image: https://example.com/dareu-a100.png
+      link: https://www.dareu.com/products/a100
+
+- class_name: 生活
+  description: 生活中用于健康、娱乐、出行等方面的设备
   equipment_list:
+    - name: Redmi A Pro 65电视
+      specification: 65英寸 / 4K超高清
+      description: 大屏幕电视，适合家庭影院和游戏娱乐体验，色彩和画质优秀。
+      image: https://example.com/redmi-a-pro-65.png
+      link: https://www.mi.com/redmi-a-pro-65/
+    - name: 九号 M95C
+      specification: 智能电动滑板车 / 30KM续航
+      description: 方便快捷的出行工具，折叠设计，适合城市通勤。
+      image: https://example.com/9bot-m95c.png
+      link: https://www.segway.com.cn/
+    - name: Mi 体脂秤 S400 Pro
+      specification: 智能体脂秤 / 多种健康指标测量 / 蓝牙连接
+      description: 精确的体脂测量功能，支持多种健康数据同步，适合监测日常健康。
+      image: https://example.com/mi-body-fat-scale-s400-pro.png
+      link: https://www.mi.com/mi-body-fat-scale-s400-pro/
     - name: AirPods Pro
       specification: 标准版
       description: 可以说是非常强的耳机了，还有好几次固件大幅度更新。apple生态只要有两个设备及以上，必入。
-      image: https://7.isyangs.cn/1/65eb3d84dea25-1.png
+      image: https://example.com/airpods-pro.png
       link: https://www.apple.com.cn/airpods-pro/
